--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+
 @import 'font-awesome-sprockets';
 @import "font-awesome";
 @import "config/colors";
@@ -5,5 +6,6 @@
 @import "config/reset";
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
-@import "modules/chat";
-@import "messages/message.scss"
+@import "modules/user";
+@import "modules/flash";
+
