--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,10 +1,13 @@
 .side-bar
   .header
     %h3.header__name
-      = %current_user.name
+      = current_user.name
     %ul.header__lists
       %li.list
-        = link_to '#' do
+        =link_to  do
+          = icon 'pencil-square-o', class: 'icon'
+      %li.list
+        = link_to new_group_path do
           = icon('fa', 'edit',class: 'icon')
       %li.list
         = link_to edit_user_path(current_user) do
@@ -15,4 +18,8 @@
         グループ名
       .group__message
         新着メッセージ
-   
+    .group 
+      .group__name
+        グループ名
+      .group__message
+        新着メッセージ
