--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,7 +3,20 @@
 
   = render 'shared/side_bar'
   
- 
+  -# .main-content
+  -#   .chat-header
+  -#     .chat-header--left
+  -#       %h2 #{@group.name}
+  -#       .chat-header__users
+  -#         Members:
+  -#         - @group.users.each do |user|
+  -#           %span.chat-header__user #{user.name}
+  -#     .chat-header--right
+        -# = link_to 'Edit', edit_chat_group_path(@chat_group), class: 'chat-header__edit-btn'
+
+
+
+
   .chat
     .header
       .left-header
@@ -16,20 +29,17 @@
           
       .right-header
         .right-header__button
-          Edit
+          = link_to 'EDIT', edit_group_path(@group)
     .messages
-      .message
-        .upper-message
-          .upper-message__user-name
-        
       .message
         .upper-message
           .upper-message__user-name
             メンバー
           .upper-message__date
-          2020/01/01  
+            2020/01/01  
         .lower-message 
           .lower-message__content
+            test
      
     .form
       %form 
