--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "config/colors";
 @import "config/font-size";
 @import "config/reset";
+@import "modules/chat";
 @import "mixins/vendor_prefix";
 @import "modules/side_bar";
 @import "modules/user";
