--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -1,3 +1,5 @@
+.wrapper{
+  display: flex;
 .chat {
   width: calc(100% - 300px);
   .header {
@@ -106,4 +108,5 @@
       padding: 0 30px;
     }
   }
+}
 }
