--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -8,18 +8,16 @@
           = icon 'pencil-square-o', class: 'icon'
       %li.list
         = link_to new_group_path do
-          = icon('fa', 'edit',class: 'icon')
+          = icon('fa', 'edit',class: 'icon') 
       %li.list
         = link_to edit_user_path(current_user) do
           = icon('fas', "cog", class: 'icon')
   .groups
-    .group
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
-    .group 
-      .group__name
-        グループ名
-      .group__message
-        新着メッセージ
+    - current_user.groups.each do |group|
+      .group
+        = link_to group_messages_path(group) do
+          .group__name
+            グループ名
+          .group__message
+            = group.show_last_message
+
