--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -17,7 +17,7 @@
       .group
         = link_to group_messages_path(group) do
           .group__name
-            グループ名
+            =group.name
           .group__message
             = group.show_last_message
 
