--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,54 +1,3 @@
 .wrapper
-  
-
   = render 'shared/side_bar'
-  
-  -# .main-content
-  -#   .chat-header
-  -#     .chat-header--left
-  -#       %h2 #{@group.name}
-  -#       .chat-header__users
-  -#         Members:
-  -#         - @group.users.each do |user|
-  -#           %span.chat-header__user #{user.name}
-  -#     .chat-header--right
-        -# = link_to 'Edit', edit_chat_group_path(@chat_group), class: 'chat-header__edit-btn'
-
-
-
-
-  .chat
-    .header
-      .left-header
-        .left-header__title
-          グループ名
-        %ul.left-header__members
-          Member：
-          %li.member
-            メンバー名
-          
-      .right-header
-        .right-header__button
-          = link_to 'EDIT', edit_group_path(@group)
-    .messages
-      .message
-        .upper-message
-          .upper-message__user-name
-            メンバー
-          .upper-message__date
-            2020/01/01  
-        .lower-message 
-          .lower-message__content
-            test
-     
-    .form
-      %form 
-       
-        %input.form__message
-        
-        .form__mask
-          %label.form__mask__image 
-            = icon('fa','image',class: 'icon') 
-            %input{type: 'file'}
-        
-        %input.form__submit{type: 'submit', value: 'Send'}
+  = render 'main_chat'
