--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -82,7 +82,7 @@
       
       background-color: $white;
       float: left;
-      height: 50px;
+      height: px;
       padding-right: 10px;
       &__image {
         position: relative;
