--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -26,12 +26,14 @@
     }
     .right-header {
       border: 1px solid $light_blue;
-      color: $light_blue;
       float: right;
       height: 40px;
       line-height: 40px;
       margin-top: 28px;
       padding: 0 20px;
+      a{
+        color: #38AEF0;
+      }
     }
   }
 
@@ -80,12 +82,11 @@
     }
     &__mask {
       
-      background-color: $white;
       float: left;
       padding-right: 10px;
       &__image {
         position: relative;
-        right: 10px;
+        right: 30px;
         font-size: 20px;
         line-height: 50px;
         input {
@@ -103,8 +104,8 @@
       float: right;
       font-size: 16px;
       height: 50px;
-      margin-left: 15px;
-      padding: 0 30px;
+      margin-left: 10px;
+      padding: 0 25px;
     }
   }
 }
